--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,16 @@ dependencies:
   retrofit: ^3.3.1
   analyzer: ^5.3.1
   dio: ^4.0.6
+  json_serializable: ^6.5.4
+  build_runner: ^2.3.3
+  retrofit_generator: ^4.2.0
+  internet_connection_checker: ^1.0.0+1
+  dartz: ^0.10.1
+  pretty_dio_logger: ^1.1.1
+  freezed: ^2.3.2
+  get_it: ^7.2.0
+  shared_preferences: ^2.0.15
+  
 
 dev_dependencies:
   flutter_test:
