--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   freezed: ^2.3.2
   get_it: ^7.2.0
   shared_preferences: ^2.0.15
+  json_annotation: ^4.7.0
   
 
 dev_dependencies:
