--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,10 @@ dependencies:
   get_it: ^7.2.0
   shared_preferences: ^2.0.15
   json_annotation: ^4.7.0
+  bloc: ^8.1.0
+  meta: ^1.8.0
+  freezed_annotation: ^2.2.0
+  flutter_bloc: ^8.1.1
   
 
 dev_dependencies:
